Add Splitting.js for hero splitting & change JS

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
 	<li><a href="">Contact</a></li>
 </nav>
 
-<div id="box"></div>
+<div id="box">
+	<h1 data-splitting>MARTYN</h1>
+	<h1 data-splitting>STIRK</h1>
+	<p>is a front end</p>
+	<h1 data-splitting>WEB</h1>
+	<h1 data-splitting>DEVELOPER</h1>
+</div>
 
+<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
+<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
+<script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
