Change #box to #hero

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<li><a href="">Contact</a></li>
 </nav>
 
-<div id="box">
+<div id="hero">
 	<h1 data-splitting>MARTYN</h1>
 	<h1 data-splitting>STIRK</h1>
 	<p>is a front end</p>
