Add About section from old site

--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
 	<h1 data-splitting>DEVELOPER</h1>
 </div>
 
+<section>
+	<h2>Hello!</h2>
+	<p>
+		I'm Martyn, a front end web developer currently based in York, UK.
+	</p>
+	<p>
+		I like to build responsive & accessible websites with stuff like React, Sass, Node, Express and Mongo.
+		I enjoy creating sites with a sense of character which create a more human experience, and I have a special interest in JavaScript and CSS animation.
+	</p>
+	<p>
+		I am also a qualified music technician, and both compose my own music and design UI audio.
+	</p>
+	<p>
+		I'm currently looking for front end work, and am willing to relocate for the right role.<br/>
+		<a class="link--dark" href="#portfolio">Take a look below for my most recent projects</a>,
+		and
+		<a class="link--dark" href="#contact">feel free get in touch with me!</a>
+	</p>
+</section>
+
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
 <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
