--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
 <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
