Prefer all caps on hero

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 </nav>
 
 <div id="hero">
-	<h1 data-splitting>MARTYN</h1>
-	<h1 data-splitting>STIRK</h1>
-	<p>is a front end</p>
-	<h1 data-splitting>WEB</h1>
-	<h1 data-splitting>DEVELOPER</h1>
+	<h1 data-splitting>MARTYN STIRK	IS A FRONT END WEB DEVELOPER</h1>
 </div>
 
 <section>
