Add header HTML

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	<h1 data-splitting>MARTYN STIRK IS A FRONT END WEB DEVELOPER</h1>
 </div>
 
+<header id="head">
+	<h1 data-splitting>MARTYN<br/>STIRK</h1>
+</header>
+
 <section>
 	<h2>Hello!</h2>
 	<p>
