Add menu text to button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <nav class="min">
-	<button></button>
+	<button>menu</button>
 	<li><a href="">About</a></li>
 	<li><a href="">Portfolio</a></li>
 	<li><a href="">Contact</a></li>
