Add random colors to section header characters

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
 
 <section>
-	<h2>Hello!</h2>
+	<h2 data-splitting>Hello!</h2>
 	<p>
 		I'm Martyn, a front end web developer currently based in York, UK.
 	</p>
@@ -44,7 +44,7 @@
 	</p>
 </section>
 <section>
-	<h2>Hello!</h2>
+	<h2 data-splitting>Hello!</h2>
 	<p>
 		I'm Martyn, a front end web developer currently based in York, UK.
 	</p>
