Change nav from list to plain links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <nav class="min">
 	<button>menu</button>
-	<li><a href="">About</a></li>
-	<li><a href="">Portfolio</a></li>
-	<li><a href="">Contact</a></li>
+	<a href="">About</a>
+	<a href="">Portfolio</a>
+	<a href="">Contact</a>
 </nav>
 
 <div id="hero">
