Add aside to About section with picture (URL will change!)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <section>
 	<h2 data-splitting>Hello!</h2>
 	<div>
+		<aside class="picture">
+			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
+		</aside>
 		<p>
 			I'm Martyn, a front end web developer currently based in York, UK.
 		</p>
