--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Martyn Stirk is a Front End Web Developer</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="author" content="Martyn Stirk">
+	<meta name="description" content="A portfolio site for front end web developer Martyn Stirk">
+	<link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
+	<link rel="icon" type="image/png" href="imgs/icon.ico" />
+	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<title>Martyn Stirk Web Developer</title>
+	<meta name="robots" content="index, follow">
+	<meta name="googlebot" content="index, follow">
 </head>
 <body>
 
