Add Contact section & SVG ghost from old site

--- a/index.html
+++ b/index.html
@@ -54,25 +54,44 @@
 		</p>
 	</div>
 </section>
-<section>
-	<h2 data-splitting>Hello!</h2>
+<section id="contact">
+	<h2 data-splitting>Let's talk!</h2>
 	<div>
+		<aside>
+			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				 viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
+				<g id="ghost">
+					<path class="ghost__body-top" d="M19,60C19,26.836,45.836,0,79,0s60,26.836,60,60" />
+					<path class="ghost__body-low"
+						d="M19,120c0,16.568,13.432,30,30,30h60c16.568,0,30-13.432,30-30V60c0-16.568-13.432-30-30-30 H49c-16.568,0-30,13.432-30,30V120z" />
+					<path class="ghost__tail"
+						d="M0,133.5c0,9.113,7.387,16.5,16.5,16.5h32c9.113,0,16.5-7.387,16.5-16.5l0,0 c0-9.113-7.387-16.5-16.5-16.5h-32C7.387,117,0,124.387,0,133.5L0,133.5z" />
+					<ellipse class="ghost__eye" cx="84" cy="55" rx="12.5px" ry="12.5px" />
+					<ellipse class="ghost__eye" cx="119" cy="55" rx="12.5px" ry="12.5px" />
+				</g>
+				<ellipse class="ghost__shadow" cx="75" cy="180" rx="15px" ry="2.5px" />
+			</svg>
+		</aside>
+		<div>
 		<p>
-			I'm Martyn, a front end web developer currently based in York, UK.
+			Email me at
+			<a href="mailto:startinmerc@gmail.com">
+				startinmerc@gmail.com</a>.
 		</p>
 		<p>
-			I like to build responsive & accessible websites with stuff like React, Sass, Node, Express and Mongo.
-			I enjoy creating sites with a sense of character which create a more human experience, and I have a special interest in JavaScript and CSS animation.
-		</p>
-		<p>
-			I am also a qualified music technician, and both compose my own music and design UI audio.
-		</p>
-		<p>
-			I'm currently looking for front end work, and am willing to relocate for the right role.<br/>
-			<a class="link--dark" href="#portfolio">Take a look below for my most recent projects</a>,
+			You can find me on
+			<a href="https://github.com/startinmerc" target="_blank" rel="noopener">Github</a>
 			and
-			<a class="link--dark" href="#contact">feel free get in touch with me!</a>
+			<a href="https://www.linkedin.com/in/martynstirk/" target="_blank"
+				rel="noopener">LinkedIn</a>.
 		</p>
+		<p>
+			I'm also on
+			<a href="https://www.instagram.com/startinmerc/" target="_blank" rel="noopener" class="link--dark">Instagram</a>
+			and sometimes throw
+			<a href="https://twitter.com/StarTinMerc" target="_blank" rel="noopener" class="link--dark">Twitter</a> a bone.
+		</p>
+		</div>
 	</div>
 </section>
 
