Add ID to about section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<h1 data-splitting>MARTYN STIRK IS A FRONT END WEB DEVELOPER</h1>
 </div>
 
-<section>
+<section id="about">
 	<h2 data-splitting>Hello!</h2>
 	<div>
 		<aside class="picture">
