--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		</p>
 		<p>
 			I'm currently looking for front end work, and am willing to relocate for the right role.<br/>
-			<a class="link--dark" href="#portfolio">Take a look below for my most recent projects</a>,
+			<a href="#portfolio">Take a look below for my most recent projects</a>,
 			and
-			<a class="link--dark" href="#contact">feel free get in touch with me!</a>
+			<a href="#contact">feel free get in touch with me!</a>
 		</p>
 	</div>
 </section>
