Change aside styling to class-based

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section id="about">
 	<h2 data-splitting>Hello!</h2>
 	<div>
-		<aside class="picture">
+		<aside class="aside--right">
 			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
 		</aside>
 		<p>
@@ -57,9 +57,9 @@
 <section id="contact">
 	<h2 data-splitting>Let's talk!</h2>
 	<div>
-		<aside>
+		<aside class="aside--left">
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				 viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
+				viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
 				<g id="ghost">
 					<path class="ghost__body-top" d="M19,60C19,26.836,45.836,0,79,0s60,26.836,60,60" />
 					<path class="ghost__body-low"
