Add mega-basic footer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	</div>
 </section>
 
+<footer style="height: 25vh; background-color: chocolate;">FOOTAH</footer>
 
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
