--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
 	<link rel="icon" type="image/png" href="imgs/icon.ico" />
 	<link rel="stylesheet" type="text/css" href="main.css" />
-	<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=PT+Mono&display=swap" rel="stylesheet">
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow">
 </head>
