--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <nav class="min">
 	<button>menu</button>
-	<a href="">About</a>
-	<a href="">Portfolio</a>
-	<a href="">Contact</a>
+	<a href="" class="display">About</a>
+	<a href="" class="display">Portfolio</a>
+	<a href="" class="display">Contact</a>
 </nav>
 
 <div id="hero">
