Portfolio button class change

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 <section id="portfolio">
 	<h2 data-splitting>Portfolio</h2>
 	<div style="padding: 0;">
-		<div class="grid">
-			<button class="grid-button display">Strange Flora</button>
-			<button class="grid-button display">Warbler</button>
-			<button class="grid-button display">Strange Estates</button>
-			<button class="grid-button display">Codepen</button>
-			<button class="grid-button display">Strange Industries</button>
-			<button class="grid-button display"><a target="_blank" rel="noopener"
+		<div class="button-grid">
+			<button class="display">Strange Flora</button>
+			<button class="display">Warbler</button>
+			<button class="display">Strange Estates</button>
+			<button class="display">Codepen</button>
+			<button class="display">Strange Industries</button>
+			<button class="display"><a target="_blank" rel="noopener"
 				href="https://drive.google.com/file/d/1345QQmaZq6-_Ma4wIBWbVKzjJX5TcucN/view?usp=sharing">
 				View CV</a>
 			</button>
