--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		</div>
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="flora">
+				<div class="col-l">
 					<img
 						src="https://images.unsplash.com/photo-1528518290605-1fcc8dcca204?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 						alt="" class="portfolio-entry__img">
@@ -82,6 +83,8 @@
 						My most recent project, a full-stack eCommerce React app interacting with a MongoDB API through async Redux
 						axios calls.
 					</p>
+				</div>
+				<div class="col-r">
 					<p>
 						The front end design is built from scratch using a theme developed through Codepen prototyping using CSS root
 						variables and style resets to ensure consistency.
@@ -106,136 +109,153 @@
 						<a href="https://github.com/startinmerc/backend-strange-flora" target="_blank" rel="noopener">API Source on
 							Github</a>
 					</p>
+				</div>
 			</div>
 		
 			<div class="portfolio-entry" id="warbler">
 				<img
 					src="https://images.unsplash.com/photo-1520808663317-647b476a81b9?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=crop&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
-				<h3 class="portfolio-entry__title">Warbler</h3>
-				<p class="portfolio-entry__tech">
-					React / Redux / React-Router / MongoDB Atlas / Mongoose / Express / Node / Bootstrap 4 / Heroku / Git
-				</p>
-				<p>
-					A MERN stack Twitter clone app with landing, authorisation, users and messages, with Redux handling API calls to
-					a
-					Mongo/Express/Node backend.
-				</p>
-				<p>
-					The front end is built off Bootstrap, customised to give a synthwave style aesthetic.
-				</p>
-				<p>
-					The back end is an API running off Heroku and MongoDB Atlas and interacts with the frontend via asyncronous
-					axios
-					calls through Redux actions. Authorisation uses JSON web tokens and local storage.
-				</p>
-				<p>
-					Built initially as a basic site through Udemy's Advanced Developer Bootcamp, I have already made significant
-					aesthetic changes and plan to keep expanding backend funcitonality based on Twitter's model.
-				</p>
-				<p class="portfolio-entry__links">
-					<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener">Visit Website</a>
-					<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener">View
-						Source on Github</a>
-					<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener">API
-						Source on Github</a>
-				</p>
+				<div class="col-l">
+					<h3 class="portfolio-entry__title">Warbler</h3>
+					<p class="portfolio-entry__tech">
+						React / Redux / React-Router / MongoDB Atlas / Mongoose / Express / Node / Bootstrap 4 / Heroku / Git
+					</p>
+					<p>
+						A MERN stack Twitter clone app with landing, authorisation, users and messages, with Redux handling API calls to
+						a
+						Mongo/Express/Node backend.
+					</p>
+				</div>
+				<div class="col-r">
+					<p>
+						The front end is built off Bootstrap, customised to give a synthwave style aesthetic.
+					</p>
+					<p>
+						The back end is an API running off Heroku and MongoDB Atlas and interacts with the frontend via asyncronous
+						axios
+						calls through Redux actions. Authorisation uses JSON web tokens and local storage.
+					</p>
+					<p>
+						Built initially as a basic site through Udemy's Advanced Developer Bootcamp, I have already made significant
+						aesthetic changes and plan to keep expanding backend funcitonality based on Twitter's model.
+					</p>
+					<p class="portfolio-entry__links">
+						<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener">Visit Website</a>
+						<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener">View
+							Source on Github</a>
+						<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener">API
+							Source on Github</a>
+					</p>
+				</div>
 			</div>
 		
 			<div class="portfolio-entry" id="estates">
 				<img
 					src="https://images.unsplash.com/photo-1488650989610-0d7e27dc293c?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=crop&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
-				<h3 class="portfolio-entry__title">Strange Estates</h3>
-				<p class="portfolio-entry__tech">
-					Bootstrap 4 / GSAP / Mongoose / MongoDB Atlas / Express / Node / Passport / Heroku / Git
-				</p>
-				<p>
-					An extensive full stack real estate website with listings, users, admins and comments databases.
-				</p>
-				<p>
-					The front end is built on Bootstrap in EJS, with colour palette and styling changes. The landing page contains
-					interactive JavaScript GSAP animation, and features are shown/hidden as appropriate for different levels of
-					user.
-				</p>
-				<p>
-					The back end is built on Node.js, using packages such as Express for routing, Passport for user authentication,
-					Mongoose for Mongo integration, Body Parser for passing parameters and Dotenv for hidden variables.
-				</p>
-				<p>
-					The site contains fully RESTful routing for listings and comments, and partial routing on users and admins.
-				</p>
-				<p>
-					As a Strange Industries site, the client is a fictional company with questionable practices. In this instance,
-					Strange Estates is a shady lettings agency with user interactions for listing reviews and administration roles.
-				</p>
-				<p class="portfolio-entry__links">
-					<a href="https://strange-estates.herokuapp.com/" target="_blank" rel="noopener">Visit
-						Website</a>
-					<a href="https://github.com/startinmerc/strange-estates" target="_blank" rel="noopener">View
-						Source on Github</a>
-				</p>
+				<div class="col-l">
+					<h3 class="portfolio-entry__title">Strange Estates</h3>
+					<p class="portfolio-entry__tech">
+						Bootstrap 4 / GSAP / Mongoose / MongoDB Atlas / Express / Node / Passport / Heroku / Git
+					</p>
+					<p>
+						An extensive full stack real estate website with listings, users, admins and comments databases.
+					</p>
+				</div>
+				<div class="col-r">
+					<p>
+						The front end is built on Bootstrap in EJS, with colour palette and styling changes. The landing page contains
+						interactive JavaScript GSAP animation, and features are shown/hidden as appropriate for different levels of
+						user.
+					</p>
+					<p>
+						The back end is built on Node.js, using packages such as Express for routing, Passport for user authentication,
+						Mongoose for Mongo integration, Body Parser for passing parameters and Dotenv for hidden variables.
+					</p>
+					<p>
+						The site contains fully RESTful routing for listings and comments, and partial routing on users and admins.
+					</p>
+					<p>
+						As a Strange Industries site, the client is a fictional company with questionable practices. In this instance,
+						Strange Estates is a shady lettings agency with user interactions for listing reviews and administration roles.
+					</p>
+					<p class="portfolio-entry__links">
+						<a href="https://strange-estates.herokuapp.com/" target="_blank" rel="noopener">Visit
+							Website</a>
+						<a href="https://github.com/startinmerc/strange-estates" target="_blank" rel="noopener">View
+							Source on Github</a>
+					</p>
+				</div>
 			</div>
 		
 			<div class="portfolio-entry" id="codepen">
 				<img
 					src="https://images.unsplash.com/photo-1547190027-9156686aa2f0?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
-				<h3 class="portfolio-entry__title">Codepen</h3>
-				<p class="portfolio-entry__tech">
-					GSAP / SASS / API interaction / Anime.js / CSS Animation / JavaScript Animation
-				</p>
-				<p>
-					I use Codepen extensively for small projects and development of site components. The ease of integration with
-					libraries & preprocessors make it an ideal playground for me to try new ideas and take part in weekly
-					challenges.
-				</p>
-				<p>
-					Most pens are front end orientated pieces and animations. These frequently use JavaScript libraries such as
-					GSAP,
-					Anime.js, & jQuery, and preprocessors SASS and PUG.
-				</p>
-				<p>
-					My portfolio there also contains online course excercises and FCC projects, along with API projects using AJAX,
-					JSON & AXIOS requests
-				</p>
-				<p class="portfolio-entry__links">
-					<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener">View Profile</a>
-					<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener">View Codepen
-						Challenge Collection</a>
-					<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener">View GSAP
-						Animation Collection</a>
-					<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener">View All
-						Collections</a>
-				</p>
+				<div class="col-l">
+					<h3 class="portfolio-entry__title">Codepen</h3>
+					<p class="portfolio-entry__tech">
+						GSAP / SASS / API interaction / Anime.js / CSS Animation / JavaScript Animation
+					</p>
+				</div>
+				<div class="col-r">
+					<p>
+						I use Codepen extensively for small projects and development of site components. The ease of integration with
+						libraries & preprocessors make it an ideal playground for me to try new ideas and take part in weekly
+						challenges.
+					</p>
+					<p>
+						Most pens are front end orientated pieces and animations. These frequently use JavaScript libraries such as
+						GSAP,
+						Anime.js, & jQuery, and preprocessors SASS and PUG.
+					</p>
+					<p>
+						My portfolio there also contains online course excercises and FCC projects, along with API projects using AJAX,
+						JSON & AXIOS requests
+					</p>
+					<p class="portfolio-entry__links">
+						<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener">View Profile</a>
+						<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener">View Codepen
+							Challenge Collection</a>
+						<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener">View GSAP
+							Animation Collection</a>
+						<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener">View All
+							Collections</a>
+					</p>
+				</div>
 			</div>
 		
 			<div class="portfolio-entry" id="thisPage">
 				<img
 					src="https://images.unsplash.com/photo-1530819568329-97653eafbbfa?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
-				<h3 class="portfolio-entry__title">Strange Industries</h3>
-				<p class="portfolio-entry__tech">
-					GSAP / Extensive CSS / JavaScript / Intersection Observer / HTML / Git
-				</p>
-				<p>
-					My personal site, Strange Industries, is built entirely from scratch. It uses minimal plugins, as I was aiming
-					to
-					build as much as I could myself.
-				</p>
-				<p>
-					The hero section makes extensive use of the GSAP JavaScript library to run complex CSS and SVG animation. The
-					header title animation is randomly generated, so every page load gives a different sequence of letter
-					animations.
-					Other sections use GSAP and CSS animations, combined with Intersection Observer to play or stop animations on
-					scroll.
-				</p>
-				<p class="portfolio-entry__links">
-					<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">View Source on
-						Github</a>
-					<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">View
-						Development Pens on Codepen</a>
-				</p>
+				<div class="col-l">
+					<h3 class="portfolio-entry__title">Strange Industries</h3>
+					<p class="portfolio-entry__tech">
+						GSAP / Extensive CSS / JavaScript / Intersection Observer / HTML / Git
+					</p>
+				</div>
+				<div class="col-r">
+					<p>
+						My personal site, Strange Industries, is built entirely from scratch. It uses minimal plugins, as I was aiming
+						to
+						build as much as I could myself.
+					</p>
+					<p>
+						The hero section makes extensive use of the GSAP JavaScript library to run complex CSS and SVG animation. The
+						header title animation is randomly generated, so every page load gives a different sequence of letter
+						animations.
+						Other sections use GSAP and CSS animations, combined with Intersection Observer to play or stop animations on
+						scroll.
+					</p>
+					<p class="portfolio-entry__links">
+						<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">View Source on
+							Github</a>
+						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">View
+							Development Pens on Codepen</a>
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
