Element in wrong div -_-

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
 			</button>
 		</div>
 		<div class="portfolio-container">
-			<div class="portfolio-entry" id="flora">
+			<div class="portfolio-entry entry-grid" id="flora">
+				<img
+					src="https://images.unsplash.com/photo-1528518290605-1fcc8dcca204?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
+					alt="" class="portfolio-entry__img">
 				<div class="col-l">
-					<img
-						src="https://images.unsplash.com/photo-1528518290605-1fcc8dcca204?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
-						alt="" class="portfolio-entry__img">
+					
 					<h3 class="portfolio-entry__title">Strange Flora</h3>
 					<p class="portfolio-entry__tech">
 						React / Redux / React-Router / Node / Express / Mongoose / MongoDB Atlas / CSS / Codepen / Heroku / Git
