Add footer content

--- a/index.html
+++ b/index.html
@@ -301,7 +301,22 @@
 	</div>
 </section>
 
-<footer style="height: 25vh; background-color: chocolate;">FOOTAH</footer>
+<footer>
+	<h3>MARTYN STIRK IS A FRONT END WEB DEVELOPER</h3>
+	<ul class="footer-links">
+		<li class="display main-link"><a href="#about">about</a></li>
+		<li class="display main-link"><a href="#portfolio">portfolio</a>
+			<ul>
+				<li class="sub-link"><a href="https://strange-flora.herokuapp.com">strange flora</a></li>
+				<li class="sub-link"><a href="https://startinmerc-warbler-client.herokuapp.com">warbler</a></li>
+				<li class="sub-link"><a href="https://strange-estates.herokuapp.com">strange estates</a></li>
+				<li class="sub-link"><a href="https://codepen.io/startinmerc/">codepen</a></li>
+				<li class="sub-link"><a href="https://startinmerc.github.io.">this site</a></li>
+			</ul>
+		</li>
+		<li class="display main-link"><a href="#contact">contact</a></li>
+	</ul>
+</footer>
 
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
