Add section-container class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <section id="about">
 	<h2 data-splitting>Hello!</h2>
-	<div>
+	<div class="section-container">
 		<aside class="aside--right">
 			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
 		</aside>
@@ -57,7 +57,7 @@
 
 <section id="portfolio">
 	<h2 data-splitting>Portfolio</h2>
-	<div style="padding: 0;">
+	<div class="section-container">
 		<div class="button-grid">
 			<button class="display">Strange Flora</button>
 			<button class="display">Warbler</button>
@@ -264,7 +264,7 @@
 
 <section id="contact">
 	<h2 data-splitting>Let's talk!</h2>
-	<div>
+	<div class="section-container">
 		<aside class="aside--left">
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 				viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
