About section copy

--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
 			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
 		</aside>
 		<p>
-			I'm Martyn, a front end web developer currently based in York, UK.
+			I'm Martyn, a front end web developer currently floating between York, UK and Bergamo, Italy.
 		</p>
 		<p>
-			I like to build responsive & accessible websites with stuff like React, Sass, Node, Express and Mongo.
-			I enjoy creating sites with a sense of character which create a more human experience, and I have a special interest in JavaScript and CSS animation.
+			I like to build fun, responsive & accessible websites with stuff like React, Sass, Node, Express and Mongo.
+			I enjoy creating sites with a sense of character and humour, and I have a special interest in animations and UI powered by JavaScript and CSS.
 		</p>
 		<p>
-			I am also a qualified music technician, and both compose my own music and design UI audio.
+			After taking an online full-stack web developer course in 2018, I fell in love with the magic of CSS its power for illustrations and animations.
+			I subsequently left my career in bookselling in 2019, and found my calling as a front end web developer, where I can get greative and unleash my true nerd self.
 		</p>
 		<p>
-			I'm currently looking for front end work, and am willing to relocate for the right role.<br/>
+			I'm currently looking for front end work, and am willing to relocate both within the UK and Europe.
 			<a href="#portfolio">Take a look below for my most recent projects</a>,
 			and
 			<a href="#contact">feel free get in touch with me!</a>
