Move CV link to About section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 			and
 			<a href="#contact">feel free get in touch with me!</a>
 		</p>
+		<p>
+			If you prefer a more normal look at my work, you can 
+			<a href="https://drive.google.com/file/d/1345QQmaZq6-_Ma4wIBWbVKzjJX5TcucN/view?usp=sharing"
+				target="_blank" rel="noopener">view my CV here</a>
+		</p>
 	</div>
 </section>
 
@@ -65,10 +70,6 @@
 			<button class="display">Strange Estates</button>
 			<button class="display">Codepen</button>
 			<button class="display">Strange Industries</button>
-			<button class="display"><a target="_blank" rel="noopener"
-				href="https://drive.google.com/file/d/1345QQmaZq6-_Ma4wIBWbVKzjJX5TcucN/view?usp=sharing">
-				View CV</a>
-			</button>
 		</div>
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="flora">
