Add this site to Portfolio

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	<h2 data-splitting>Portfolio</h2>
 	<div class="section-container">
 		<div class="button-grid">
+			<button class="display">Portfolio Site</button>
 			<button class="display">Strange Flora</button>
 			<button class="display">Warbler</button>
 			<button class="display">Strange Estates</button>
@@ -72,6 +73,44 @@
 			<button class="display">Strange Industries</button>
 		</div>
 		<div class="portfolio-container">
+			<div class="portfolio-entry" id="thisPage">
+				<img
+					src="https://images.unsplash.com/photo-1530819568329-97653eafbbfa?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
+					alt="" class="portfolio-entry__img">
+				<div class="col-l">
+					<h3 class="portfolio-entry__title">Portfolio Site</h3>
+					<p class="portfolio-entry__tech">
+						GSAP / SASS / JavaScript / HTML / Git / Netlify / Codepen
+					</p>
+					<p>
+						The site you're on! A colourful redesigned portfolio site with probably too much animation.
+					</p>
+				</div>
+				<div class="col-r">
+					<p>
+						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">old portfolio site</a>,
+						sharing the same basic markup but with a dramatically colourful and playful redesign.
+					</p>
+						I documented the redesign on <a href="http://startinmerc.home.blog"  target="_blank" rel="noopener">a blog</a>, something I think I'll continue to going forward.
+						I found it an incredibly gratifying experience, and combined with Codepen prototyping,
+						 helping me voice my thought process and improve my coding practices.
+					<p>
+						Both the hero and section elements make heavy use of GSAP 3 and their ScrollTrigger plugin in particular.
+						This is most prominent in the hero element, where a combination of SplittingJS, ScrollTrigger,
+						 randomly generated GSAP tweens and random color styles to create a bold scroll-based animation.
+												Sections also have GSAP timelines with ScrollTriggers, and their headers share the hero's randomised styles.
+					</p>
+					<p>
+						This is also my first project developed entirely with SASS, using VSCode and a live compiler for development.
+					</p>
+					<p class="portfolio-entry__links">
+						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener">View Source on Github</a>
+						<a href="http://startinmerc.home.blog" target="_blank" rel="noopener">View Development Blog</a>
+						<a href="https://codepen.io/collection/DwYgGq" target="_blank" rel="noopener">View	Development Pens on Codepen</a>
+					</p>
+				</div>
+			</div>
+
 			<div class="portfolio-entry" id="flora">
 				<img
 					src="https://images.unsplash.com/photo-1528518290605-1fcc8dcca204?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
