Smaller Portfolio copy tweaks

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </section>
 
 <section id="portfolio">
-	<h2 data-splitting>Portfolio</h2>
+	<h2 data-splitting>Stuff I've Done!</h2>
 	<div class="section-container">
 		<div class="button-grid">
 			<button class="display">Portfolio Site</button>
@@ -78,12 +78,12 @@
 					src="https://images.unsplash.com/photo-1530819568329-97653eafbbfa?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Portfolio Site</h3>
+					<h3 class="portfolio-entry__title">Portfolio Site 2020</h3>
 					<p class="portfolio-entry__tech">
 						GSAP / SASS / JavaScript / HTML / Git / Netlify / Codepen
 					</p>
 					<p>
-						The site you're on! A colourful redesigned portfolio site with probably too much animation.
+						The site you're on! A colourful redesigned portfolio site with tons of SASS and JavaScript animation.
 					</p>
 				</div>
 				<div class="col-r">
@@ -122,7 +122,7 @@
 						React / Redux / React-Router / Node / Express / Mongoose / MongoDB Atlas / CSS / Codepen / Heroku / Git
 					</p>
 					<p>
-						My most recent project, a full-stack eCommerce React app interacting with a MongoDB API through async Redux
+						A full-stack eCommerce React app interacting with a MongoDB API through async Redux
 						axios calls.
 					</p>
 				</div>
@@ -171,7 +171,7 @@
 				</div>
 				<div class="col-r">
 					<p>
-						The front end is built off Bootstrap, customised to give a synthwave style aesthetic.
+						The front end is built off Bootstrap, customised to give a synthwave aesthetic.
 					</p>
 					<p>
 						The back end is an API running off Heroku and MongoDB Atlas and interacts with the frontend via asyncronous
@@ -239,6 +239,9 @@
 					<h3 class="portfolio-entry__title">Codepen</h3>
 					<p class="portfolio-entry__tech">
 						GSAP / SASS / API interaction / Anime.js / CSS Animation / JavaScript Animation
+					</p>
+					<p>
+						Small projects, prototyping, and generally a playground for me to try new libraries and preprocessors.
 					</p>
 				</div>
 				<div class="col-r">
