--- a/index.html
+++ b/index.html
@@ -104,9 +104,15 @@
 						This is also my first project developed entirely with SASS, using VSCode and a live compiler for development.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener">View Source on Github</a>
-						<a href="http://startinmerc.home.blog" target="_blank" rel="noopener">View Development Blog</a>
-						<a href="https://codepen.io/collection/DwYgGq" target="_blank" rel="noopener">View	Development Pens on Codepen</a>
+						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener">
+							View Source on Github
+						</a>
+						<a href="http://startinmerc.home.blog" target="_blank" rel="noopener">
+							View Development Blog
+						</a>
+						<a href="https://codepen.io/collection/DwYgGq" target="_blank" rel="noopener">
+							View	Development Pens on Codepen
+						</a>
 					</p>
 				</div>
 			</div>
@@ -116,7 +122,6 @@
 					src="https://images.unsplash.com/photo-1528518290605-1fcc8dcca204?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
 				<div class="col-l">
-					
 					<h3 class="portfolio-entry__title">Strange Flora</h3>
 					<p class="portfolio-entry__tech">
 						React / Redux / React-Router / Node / Express / Mongoose / MongoDB Atlas / CSS / Codepen / Heroku / Git
@@ -130,8 +135,8 @@
 					<p>
 						The front end design is built from scratch using a theme developed through Codepen prototyping using CSS root
 						variables and style resets to ensure consistency.
-						The site uses reusable components and responsive component rendering, with React-Router for navigation. Redux
-						manages state through the app for data such as API calls, wishlist and cart management, storing locally.
+						The site uses reusable components and responsive component rendering, with React-Router for navigation.
+						Redux manages state through the app for data such as API calls, wishlist and cart management, storing locally.
 						The back end runs from MongoDB Atlas via Heroku, and uses multiple API end points and model cross-referencing to
 						give consistent and easily modifiable data.
 					</p>
@@ -144,12 +149,15 @@
 						Strange Flora is an eCommerce site selling various plants and potions not recommended for human consumption.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://strange-flora.herokuapp.com/" target="_blank" rel="noopener">Visit
-							Website</a>
-						<a href="https://github.com/startinmerc/strange-fauna" target="_blank" rel="noopener">View
-							Source on Github</a>
-						<a href="https://github.com/startinmerc/backend-strange-flora" target="_blank" rel="noopener">API Source on
-							Github</a>
+						<a href="https://strange-flora.herokuapp.com/" target="_blank" rel="noopener">
+							Visit Website
+						</a>
+						<a href="https://github.com/startinmerc/strange-fauna" target="_blank" rel="noopener">
+							View Source on Github
+						</a>
+						<a href="https://github.com/startinmerc/backend-strange-flora" target="_blank" rel="noopener">
+							API Source on Github
+						</a>
 					</p>
 				</div>
 			</div>
@@ -164,9 +172,8 @@
 						React / Redux / React-Router / MongoDB Atlas / Mongoose / Express / Node / Bootstrap 4 / Heroku / Git
 					</p>
 					<p>
-						A MERN stack Twitter clone app with landing, authorisation, users and messages, with Redux handling API calls to
-						a
-						Mongo/Express/Node backend.
+						A MERN stack Twitter clone app with landing, authorisation, users and messages,
+						with Redux handling API calls to a Mongo/Express/Node backend.
 					</p>
 				</div>
 				<div class="col-r">
@@ -175,19 +182,22 @@
 					</p>
 					<p>
 						The back end is an API running off Heroku and MongoDB Atlas and interacts with the frontend via asyncronous
-						axios
-						calls through Redux actions. Authorisation uses JSON web tokens and local storage.
+						axios calls through Redux actions. Authorisation uses JSON web tokens and local storage.
 					</p>
 					<p>
 						Built initially as a basic site through Udemy's Advanced Developer Bootcamp, I have already made significant
 						aesthetic changes and plan to keep expanding backend funcitonality based on Twitter's model.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener">Visit Website</a>
-						<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener">View
-							Source on Github</a>
-						<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener">API
-							Source on Github</a>
+						<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener">
+							Visit Website
+						</a>
+						<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener">
+							View Source on Github
+						</a>
+						<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener">
+							API Source on Github
+						</a>
 					</p>
 				</div>
 			</div>
@@ -247,31 +257,34 @@
 				<div class="col-r">
 					<p>
 						I use Codepen extensively for small projects and development of site components. The ease of integration with
-						libraries & preprocessors make it an ideal playground for me to try new ideas and take part in weekly
-						challenges.
+						libraries & preprocessors make it an ideal playground for me to try new ideas and take part in weekly challenges.
 					</p>
 					<p>
-						Most pens are front end orientated pieces and animations. These frequently use JavaScript libraries such as
-						GSAP,
-						Anime.js, & jQuery, and preprocessors SASS and PUG.
+						Most pens are front end orientated pieces and animations.
+						These frequently use JavaScript libraries such as	GSAP,	Anime.js, & jQuery, and preprocessors SASS and PUG.
 					</p>
 					<p>
 						My portfolio there also contains online course excercises and FCC projects, along with API projects using AJAX,
 						JSON & AXIOS requests
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener">View Profile</a>
-						<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener">View Codepen
-							Challenge Collection</a>
-						<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener">View GSAP
-							Animation Collection</a>
-						<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener">View All
-							Collections</a>
+						<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener">
+							View Profile
+						</a>
+						<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener">
+							View Codepen Challenge Collection
+						</a>
+						<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener">
+							View GSAP Animation Collection
+						</a>
+						<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener">
+							View All Collections
+						</a>
 					</p>
 				</div>
 			</div>
 		
-			<div class="portfolio-entry" id="thisPage">
+			<div class="portfolio-entry" id="oldSite">
 				<img
 					src="https://images.unsplash.com/photo-1530819568329-97653eafbbfa?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=790&h=527&fit=max&ixid=eyJhcHBfaWQiOjF9"
 					alt="" class="portfolio-entry__img">
@@ -280,25 +293,27 @@
 					<p class="portfolio-entry__tech">
 						GSAP / Extensive CSS / JavaScript / Intersection Observer / HTML / Git
 					</p>
+					<p>
+						My old personal portfolio site, built using minimal plugins, as I was aiming to build as much as I could myself.
+					</p>
 				</div>
 				<div class="col-r">
 					<p>
-						My personal site, Strange Industries, is built entirely from scratch. It uses minimal plugins, as I was aiming
-						to
-						build as much as I could myself.
+						The hero section makes extensive use of the GSAP JavaScript library to run complex CSS and SVG animation.
+						The header title animation is randomly generated, so every page load gives a different sequence of letter animations.
+						Other sections use GSAP and CSS animations, combined with Intersection Observer to play or stop animations on scroll.
 					</p>
 					<p>
-						The hero section makes extensive use of the GSAP JavaScript library to run complex CSS and SVG animation. The
-						header title animation is randomly generated, so every page load gives a different sequence of letter
-						animations.
-						Other sections use GSAP and CSS animations, combined with Intersection Observer to play or stop animations on
-						scroll.
+						The site reflected my learning of methodoligies such as the BEM naming convention,
+						using Git for development and continuous deployment though GitHub.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">View Source on
-							Github</a>
-						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">View
-							Development Pens on Codepen</a>
+						<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">
+							View Source on Github
+						</a>
+						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">
+							View Development Pens on Codepen
+						</a>
 					</p>
 				</div>
 			</div>
