Contact + Footer copy

--- a/index.html
+++ b/index.html
@@ -352,10 +352,11 @@
 				rel="noopener">LinkedIn</a>.
 		</p>
 		<p>
-			I'm also on
+			I'm a fairly regular
 			<a href="https://www.instagram.com/startinmerc/" target="_blank" rel="noopener" class="link--dark">Instagram</a>
-			and sometimes throw
-			<a href="https://twitter.com/StarTinMerc" target="_blank" rel="noopener" class="link--dark">Twitter</a> a bone.
+			 user, and sometimes throw
+			<a href="https://twitter.com/StarTinMerc" target="_blank" rel="noopener" class="link--dark">Twitter</a>
+			 a bone, although it's mostly out-of-context remarks on road cycling to be honest.
 		</p>
 	</div>
 </section>
@@ -366,6 +367,7 @@
 		<li class="display main-link"><a href="#about">about</a></li>
 		<li class="display main-link"><a href="#portfolio">portfolio</a>
 			<ul>
+				<li class="sub-link">External links:</li>
 				<li class="sub-link"><a href="https://strange-flora.herokuapp.com">strange flora</a></li>
 				<li class="sub-link"><a href="https://startinmerc-warbler-client.herokuapp.com">warbler</a></li>
 				<li class="sub-link"><a href="https://strange-estates.herokuapp.com">strange estates</a></li>
