Add nav-link class, exclude from addLinkHovers

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <nav class="min">
 	<button>menu</button>
-	<a href="#about" class="display">About</a>
-	<a href="#portfolio" class="display">Portfolio</a>
-	<a href="#contact" class="display">Contact</a>
+	<a href="#about" class="display nav-link">About</a>
+	<a href="#portfolio" class="display nav-link">Portfolio</a>
+	<a href="#contact" class="display nav-link">Contact</a>
 </nav>
 
 <div id="hero">
