--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
 		</aside>
 		<p>
-			I'm Martyn, a front end web developer currently floating between York, UK and Bergamo, Italy.
+			I'm Martyn, a front end web developer currently floating between York (UK) and Bergamo (Italy).
 		</p>
 		<p>
 			I like to build fun, responsive & accessible websites with stuff like React, Sass, Node, Express and Mongo.
@@ -91,17 +91,17 @@
 						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">old portfolio site</a>,
 						sharing the same basic markup but with a dramatically colourful and playful redesign.
 					</p>
-						I documented the redesign on <a href="http://startinmerc.home.blog"  target="_blank" rel="noopener">a blog</a>, something I think I'll continue to going forward.
-						I found it an incredibly gratifying experience, and combined with Codepen prototyping,
-						 helping me voice my thought process and improve my coding practices.
+						I documented the redesign on <a href="http://startinmerc.home.blog"  target="_blank" rel="noopener">a blog</a>, something I think I'll continue to do going forward.
+						I found it an incredibly gratifying experience and, combined with Codepen prototyping,
+						 this helped me record my thought process and improve my coding practices.
 					<p>
-						Both the hero and section elements make heavy use of GSAP 3 and their ScrollTrigger plugin in particular.
-						This is most prominent in the hero element, where a combination of SplittingJS, ScrollTrigger,
-						 randomly generated GSAP tweens and random color styles to create a bold scroll-based animation.
+						Both the hero and section elements make heavy use of GSAP 3, and their ScrollTrigger plugin in particular.
+						This is most prominent in the hero element where a combination of SplittingJS, ScrollTrigger,
+						 randomly generated GSAP tweens and random colour styles come together to create a bold scroll-based animation.
 						Sections also have GSAP timelines with ScrollTriggers, and their headers share the hero's randomised styles.
 					</p>
 					<p>
-						This is also my first project developed entirely with SASS, using VSCode and a live compiler for development.
+						This is my first project developed entirely with SASS, using VSCode and a live compiler for development.
 					</p>
 					<p class="portfolio-entry__links">
 						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener">
@@ -133,20 +133,20 @@
 				</div>
 				<div class="col-r">
 					<p>
-						The front end design is built from scratch using a theme developed through Codepen prototyping using CSS root
+						The front end design is built using a theme developed through Codepen prototyping using CSS root
 						variables and style resets to ensure consistency.
-						The site uses reusable components and responsive component rendering, with React-Router for navigation.
-						Redux manages state through the app for data such as API calls, wishlist and cart management, storing locally.
-						The back end runs from MongoDB Atlas via Heroku, and uses multiple API end points and model cross-referencing to
+						The site uses reusable components and responsive component rendering with React-Router for navigation.
+						State is managed thoughout the app by Redux for data such as API calls, local storage, wishlist and cart management, 
+						The back end runs on MongoDB Atlas via Heroku, and uses multiple API end points and model cross-referencing to
 						give consistent and easily modifiable data.
 					</p>
 					<p>
-						Created while learning React, this site grows as I learn more, with a current work to do list in the <a
-							href="https://github.com/startinmerc/strange-flora#todo" target="_blank" rel="noopener">repo readme.</a>
+						Initially created while learning React, this site continues to develop as I learn more,
+						 with a list of features in progress in the site's <a href="https://github.com/startinmerc/strange-flora#todo" target="_blank" rel="noopener">repo readme.</a>
 					</p>
 					<p>
-						As a Strange Industries site, the client is a fictional company with questionable practices. In this instance,
-						Strange Flora is an eCommerce site selling various plants and potions not recommended for human consumption.
+						As a Strange Industries site, the client is a fictional company.
+						 In this instance, Strange Flora is an eCommerce site selling various plants and potions not recommended for human consumption.
 					</p>
 					<p class="portfolio-entry__links">
 						<a href="https://strange-flora.herokuapp.com/" target="_blank" rel="noopener">
