Change portfolio buttons to links

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 	<h2 data-splitting>Stuff I've Done!</h2>
 	<div class="section-container">
 		<div class="button-grid">
-			<button class="display">Portfolio Site</button>
-			<button class="display">Strange Flora</button>
-			<button class="display">Warbler</button>
-			<button class="display">Strange Estates</button>
-			<button class="display">Codepen</button>
-			<button class="display">Strange Industries</button>
+			<a href="#thisPage" class="display custom-link">Portfolio Site</a>
+			<a href="#flora" class="display custom-link">Strange Flora</a>
+			<a href="#warbler" class="display custom-link">Warbler</a>
+			<a href="#estates" class="display custom-link">Strange Estates</a>
+			<a href="#codepen" class="display custom-link">Codepen</a>
+			<a href="#oldSite" class="display custom-link">Strange Industries</a>
 		</div>
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
