Switch from "min" class to "max"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<h1 data-splitting>MARTYN<br />STIRK</h1>
 </header>
 
-<nav class="min">
+<nav class="">
 	<button>menu</button>
 	<a href="#about" class="display custom-link">About</a>
 	<a href="#portfolio" class="display custom-link">Portfolio</a>
